--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table cellspacing="15 ">
 <tr>
      <td>
-        <img src="img/Mikola.jpg" width="150" alt="Тут моя фотка">
+        <img src="Mikola.jpg" width="150" alt="Тут моя фотка">
      </td>
      <td>
         <h1>Прорешный Николай</h1>
